Background Color Fixed for dropdown and also z-index added

--- a/css/style.css
+++ b/css/style.css
@@ -10,3 +10,7 @@
     text-decoration: none;
     color: white;
  }
+
+ .dropdown-api-nav {
+    z-index: 9999;
+ }
